--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Portfólio</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Início</a>
+            <a href="#">Sobre Mim</a>
+            <a href="#">Habilidades</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Oi, eu sou Brenno Ribeiro</h1>
+        <h2>Desenvolvedor Frontend</h2>
+        <h3>um desenvolvedor web focado no frontend</h3>
+        <a href="#">GitHub</a>
+        <a href="#">Linkedln</a>
+        <section>
+            <h2>Projetos</h2>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
