--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <h1>Oi, eu sou Brenno Ribeiro</h1>
         <h2>Desenvolvedor Frontend</h2>
-        <h3>um desenvolvedor web focado no frontend</h3>
+        <p>um desenvolvedor web focado no frontend</p>
         <a href="#">GitHub</a>
         <a href="#">Linkedln</a>
         <section>
