--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="imagens/bugdroid.png" alt="">
         <nav>
             <a href="#">Início</a>
             <a href="#">Sobre Mim</a>
