--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         </nav>
     </header>
     <main>
-        <h1>Oi, eu sou Brenno Ribeiro</h1>
-        <h2>Desenvolvedor Frontend</h2>
-        <p>um desenvolvedor web focado no frontend</p>
-        <a href="#">GitHub</a>
-        <a href="#">Linkedln</a>
-        <section>
+        <section id="intro">
+            <h1>Oi, eu sou Brenno Ribeiro</h1>
+            <h2>Desenvolvedor Frontend</h2>
+            <p>um desenvolvedor web focado no frontend</p>
+            <a href="#">GitHub</a>
+            <a href="#">Linkedln</a>
+        </section>
+        <section id="projetos">
             <h2>Projetos</h2>
         </section>
     </main>
