--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
         </section>
         <section id="projetos">
             <h2>Projetos</h2>
+            <article>
+                <img src="imagens/bugdroid.png" alt="">
+                <aside>
+                    <h1>Instagram clone</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat magnam repellendus voluptatem doloremque necessitatibus voluptas facere aspernatur, eligendi expedita asperiores porro officia. Deserunt a harum consequuntur molestias, sed dolorum. Itaque?</p>
+                    <p>NodeJS, React</p>
+                    <a href="#">Deploy</a>
+                    <a href="#">GitHub</a>
+                </aside>
+            </article>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Brenno Ribeiro</p>
+    </footer>
 </body>
 </html>
