--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="imagens/bugdroid.png" alt="">
+        <img src="imagens/bugdroid.png" alt="Logo">
         <nav>
             <a href="#">Início</a>
             <a href="#">Sobre Mim</a>
@@ -20,10 +20,12 @@
     <main>
         <section id="intro">
             <h1>Oi, eu sou Brenno Ribeiro</h1>
-            <h2>Desenvolvedor Frontend</h2>
+            <h1>Desenvolvedor Frontend</h1>
             <p>um desenvolvedor web focado no frontend</p>
-            <a href="#">GitHub</a>
-            <a href="#">Linkedln</a>
+            <div>
+                <a href="#">GitHub</a>
+                <a href="#">Linkedln</a>
+            </div>
         </section>
         <section id="projetos">
             <h2>Projetos</h2>
