--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="imagens/logo.png" alt="Logo">
         <nav>
-            <a href="#">Início</a>
+            <a href="index.html" target="_self">Início</a>
             <a href="#">Sobre Mim</a>
             <a href="#">Habilidades</a>
             <a href="#">Contato</a>
@@ -36,8 +36,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nihil et enim aliquid, eaque fugiat odit nemo libero optio necessitatibus, ullam delectus doloribus facilis tempora commodi magnam eum numquam ex!Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat magnam repellendus voluptatem doloremque necessitatibus voluptas facere aspernatur, eligendi expedita asperiores porro officia. Deserunt a harum consequuntur molestias, sed dolorum. Itaque?</p>
                     <p><strong>NodeJS, React</strong></p>
                     <div>
-                        <a href="#"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem"><strong>Deploy</strong></a>
-                        <a href="#"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code"><strong>GitHub</strong></a>
+                        <a href="#"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
+                        <a href="#"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
                     </div>
                 </aside>
             </article>
