--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <nav>
             <a href="index.html" target="_self">Início</a>
             <a href="#">Sobre Mim</a>
-            <a href="#">Habilidades</a>
-            <a href="#">Contato</a>
+            <a href="contato.html" target="_self">Contato</a>
         </nav>
     </header>
     <main>
