--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
         <img src="imagens/logo.png" alt="Logo">
         <nav>
             <a href="index.html" target="_self">Início</a>
-            <a href="#">Sobre Mim</a>
+            <a href="sobre.html" target="_self">Sobre Mim</a>
             <a href="contato.html" target="_self">Contato</a>
         </nav>
     </header>
