--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,33 @@
         </nav>
     </header>
     <main>
-        <section></section>
+        <h1>Sobre</h1>
+        <section>
+            <p>link para download do meu <a href="download/Currículo Brenno Ribeiro.pdf" download="download/Currículo Brenno Ribeiro.pdf" type="application/pdf">currículo.</a></p>
+        </section>
+        <section>
+            <p>Estudante de ciências da computação, hardware e software.</p>
+            <p>Iniciando no desenvolvimento em 2022, me reconheço como entusiasta em novas tecnologias do mercado, sempre buscando entender atualidades e novos conceitos de trabalho, adquirindo conhecimento dia após dia.</p><br>
+            <p>Possuo foco desenvolvimento com JavaScript, NodeJS, ECMAScript, com HTML e CSS, aprendizado em lógica de programação.</p><br>
+            <p>Me considero detalhista para tentar reduzir os problemas, uma pessoa otimista que sempre vai pensar no sucesso e progresso, empolgado para começar novos projetos e trabalhos sempre buscando resolver os problemas.</p>
+        </section>
+        <section id="certificados">
+            <picture>
+                <source media="(max-width: 550px)" srcset="imagens/img-sobre/Certificado-Ingles-p.png" type="image/png">
+                <img src="imagens/img-sobre/Certificado-Ingles.png" alt="">
+            </picture>
+            <picture>
+                <source media="(max-width: 550px)" srcset="imagens/img-sobre/Certificado-Informatica-2-p.png" type="image/png">
+                <img src="imagens/img-sobre/Certificado-Informatica-2.png" alt="">
+            </picture>
+            <picture>
+                <source media="(max-width: 550px)" srcset="imagens/img-sobre/Certificado-Informatica-p.png" type="image/png">
+                <img src="imagens/img-sobre/Certificado-Informatica.png" alt="">
+            </picture>
+        </section>
     </main>
+    <footer>
+        <p>Brenno Ribeiro</p>
+    </footer>
 </body>
 </html>
