--- a/contato.html
+++ b/contato.html
@@ -19,10 +19,10 @@
     </header>
     <main>
         <h1>Contatos</h1>
-        <p class="contatos"><img src="imagens/Email.64.png" alt="">E-mail: brenno6194@gmail.com</p>
-        <p class="contatos"><img src="imagens/Chat-2.64.png" alt="">Número: (65)99228-3702</p>
-        <p class="contatos"><img src="imagens/Search.64.png" alt="">LinkedIn: <a href="https://www.linkedin.com/in/brenno-ribeiro-63b718268/" target="_blank" rel="external">https://www.linkedin.com/in/brenno-ribeiro-63b718268/</a></p>
-        <p class="contatos"><img src="imagens/Settings-2.64.png" alt="">GitHub: <a href="https://github.com/BrennoRibeiros" target="_blank" rel="external">https://github.com/BrennoRibeiros</a></p>
+        <p class="contatos"><img src="imagens/img-contato/Email.64.png" alt="">E-mail: brenno6194@gmail.com</p>
+        <p class="contatos"><img src="imagens/img-contato/Chat-2.64.png" alt="">Número: (65)99228-3702</p>
+        <p class="contatos"><img src="imagens/img-contato/Search.64.png" alt="">LinkedIn: <a href="https://www.linkedin.com/in/brenno-ribeiro-63b718268/" target="_blank" rel="external">https://www.linkedin.com/in/brenno-ribeiro-63b718268/</a></p>
+        <p class="contatos"><img src="imagens/img-contato/Settings-2.64.png" alt="">GitHub: <a href="https://github.com/BrennoRibeiros" target="_blank" rel="external">https://github.com/BrennoRibeiros</a></p>
     </main>
     <footer>
         <p>Brenno Ribeiro</p>
