--- a/sobre.html
+++ b/sobre.html
@@ -29,6 +29,7 @@
             <p>Me considero detalhista para tentar reduzir os problemas, uma pessoa otimista que sempre vai pensar no sucesso e progresso, empolgado para começar novos projetos e trabalhos sempre buscando resolver os problemas.</p>
         </section>
         <section id="certificados">
+            <h1>Certificados</h1>
             <picture>
                 <source media="(max-width: 550px)" srcset="imagens/img-sobre/Certificado-Ingles-p.png" type="image/png">
                 <img src="imagens/img-sobre/Certificado-Ingles.png" alt="">
