--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
         <section id="projetos">
             <h2>Projetos</h2>
             <article>
-                <img src="imagens/bugdroid.png" alt="">
+                <picture>
+                    <source media="(max-width: 550px)" srcset="imagens/img-projetos/img-portfolio-p.png" type="image/png">
+                    <img src="imagens/img-projetos/img-portfolio.png" alt="Imagem demo">
+                </picture>
                 <aside>
                     <h1>Portfólio</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nihil et enim aliquid, eaque fugiat odit nemo libero optio necessitatibus, ullam delectus doloribus facilis tempora commodi magnam eum numquam ex!Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat magnam repellendus voluptatem doloremque necessitatibus voluptas facere aspernatur, eligendi expedita asperiores porro officia. Deserunt a harum consequuntur molestias, sed dolorum. Itaque?</p>
-                    <p><strong>HTML5, CSS3</strong></p>
+                    <p>Projeto desse site de Portfólio, aplicando os conhecimentos que aprendi no canal Curso em Vídeo, meu primeiro projeto de portfólio, utilizando HTML para aplicar o conteúdo e criar outras páginas e CSS para realizar a estilização, buscando sempre deixar o site dinâmico e com imagens dinâmicas para acesso em smartphone, site com o objetivo de mostar outros projetos e levar os links para o código.</p>
+                    <p><strong>HTML, CSS</strong></p>
                     <div>
-                        <a href="#"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
-                        <a href="#"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
+                        <a href="https://brennoribeiros.github.io/Portfolio/"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
+                        <a href="https://github.com/BrennoRibeiros/Portfolio"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
                     </div>
                 </aside>
             </article>
