--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <p>Projeto desse site de Portfólio, aplicando os conhecimentos que aprendi no canal Curso em Vídeo, meu primeiro projeto de portfólio, utilizando HTML para aplicar o conteúdo e criar outras páginas e CSS para realizar a estilização, buscando sempre deixar o site dinâmico e com imagens dinâmicas para acesso em smartphone, site com o objetivo de mostar outros projetos e levar os links para o código.</p>
                     <p><strong>HTML, CSS</strong></p>
                     <div>
-                        <a href="https://brennoribeiros.github.io/Portfolio/"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
-                        <a href="https://github.com/BrennoRibeiros/Portfolio"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
+                        <a href="https://brennoribeiros.github.io/Portfolio/" target="_blank"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
+                        <a href="https://github.com/BrennoRibeiros/Portfolio" target="_blank"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
                     </div>
                 </aside>
             </article>
