--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
                     </div>
                 </aside>
             </article>
+            <article>
+                <picture>
+                    <source media="(max-width: 550px)" srcset="imagens/img-projetos/img-calculadora-p.png" type="image/png">
+                    <img src="imagens/img-projetos/img-calculadora.png" alt="Imagem demo">
+                </picture>
+                <aside>
+                    <h1>Calculadora</h1>
+                    <p>Projeto de uma calculadora, utilizando JavaScript e NodeJS no Back-end para guardar os números digitados e realizar o cálculo selecionado, após isso entregar o resultado para o Front-end. HTML e CSS utilizado no Front-end para adicionar os botões e todo o conteúdo, também para pegar o número digitado e entregar para o Back-end.</p>
+                    <p><strong>JavaScript, NodeJS, HTML, CSS</strong></p>
+                    <div>
+                        <a href="https://brennoribeiros.github.io/calculator/" target="_blank"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
+                        <a href="https://github.com/BrennoRibeiros/calculator" target="_blank"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
+                    </div>
+                </aside>
+            </article>
         </section>
     </main>
     <footer>
