--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     </div>
                 </aside>
             </article>
+
             <article>
                 <picture>
                     <source media="(max-width: 550px)" srcset="imagens/img-projetos/img-calculadora-p.png" type="image/png">
@@ -55,6 +56,22 @@
                     <div>
                         <a href="https://brennoribeiros.github.io/calculator/" target="_blank"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
                         <a href="https://github.com/BrennoRibeiros/calculator" target="_blank"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
+                    </div>
+                </aside>
+            </article>
+
+            <article>
+                <picture>
+                    <source media="(max-width: 550px)" srcset="imagens/img-projetos/img-seletor-p.png" type="image/png">
+                    <img src="imagens/img-projetos/img-seletor.png" alt="Imagem demo">
+                </picture>
+                <aside>
+                    <h1>Seletor</h1>
+                    <p>Projeto de um seletor de opções, aplicando conhecimentos de Back-end com JavaScript, para realizar a mudança da imagem e cor de fundo do site conforme a opção selecionada, e deixar o CSS ou estilização mais perceptível a mudanças visuais.</p>
+                    <p><strong>JavaScript, HTML, CSS</strong></p>
+                    <div>
+                        <a href="https://brennoribeiros.github.io/selector/" target="_blank"><img src="imagens/Github-Octicons-Gear-16.16.png" alt="Imagem engrenagem">Deploy</a>
+                        <a href="https://github.com/BrennoRibeiros/selector" target="_blank"><img src="imagens/Github-Octicons-Code-16.16.png" alt="Imagem code">GitHub</a>
                     </div>
                 </aside>
             </article>
